--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "mongodb": "^6.10.0",
     "next": "15.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20",
